compiler/toc-hir-lowering/tests/snapshots/lowering__lower_function_tys.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : function np   () : real"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..32): "<root>"@(dummy)
      StmtBody@(src/main.t:0..32): []
        StmtItem@(src/main.t:0..32): ItemId(0)
          Type@(src/main.t:0..32): "_"@(src/main.t:5..6)
            Function@(src/main.t:9..32): [...]
              Primitive@(src/main.t:28..32): Real
