compiler/toc-hir-lowering/tests/snapshots/lowering__lower_get_stmt-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: get
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..3): "<root>"@(dummy)
      StmtBody@(src/main.t:0..3): []
error at src/main.t:0..3: unexpected end of file
| error for src/main.t:0..3: expected expression after here
