compiler/toc-hir-lowering/tests/snapshots/lowering__lower_get_stmt-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: get a*a
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..7): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..7): []
        Get@(FileId(1), 0..7)
          Binary@(FileId(1), 4..7): Mul
            Name@(FileId(1), 4..5): "a"@(FileId(1), 4..5), undeclared
            Name@(FileId(1), 6..7): "a"@(FileId(1), 6..7), undeclared
error in file FileId(1) at 4..5: `a` is undeclared
| error in file FileId(1) for 4..5: no definitions of `a` are in scope

