compiler/toc-hir-lowering/tests/snapshots/lowering__lower_get_stmt-6.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "get : 1"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..7): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..7): []
        Get@(FileId(1), 0..7)
          Literal@(FileId(1), 6..7): Integer(1)
error at (FileId(1), 6..7): unexpected end of file
| error for (FileId(1), 6..7): expected `,` after here

