compiler/toc-hir-lowering/tests/snapshots/lowering__lower_get_stmt.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: get a
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..5): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..5): []
        Get@(FileId(1), 0..5)
          Name@(FileId(1), 4..5): "a"@(FileId(1), 4..5), undeclared
error at (FileId(1), 4..5): `a` is undeclared
| error for (FileId(1), 4..5): no definitions of `a` are in scope

