compiler/toc-hir-lowering/tests/snapshots/lowering__lower_if_stmt-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    if true then\n        var a := 1\n    else\n        var a := 2\n    end if\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(2)
    Module@(src/main.t:0..80): "<root>"@(dummy)
      StmtBody@(src/main.t:5..75): []
        If@(src/main.t:5..75)
          Literal@(src/main.t:8..12): Boolean(true)
          Block@(src/main.t:26..36): Normal
            StmtItem@(src/main.t:26..36): ItemId(0)
              ConstVar@(src/main.t:26..36): var "a"@(src/main.t:30..31)
                ExprBody@(src/main.t:35..36)
                  Literal@(src/main.t:35..36): Integer(1)
          Block@(src/main.t:54..64): Normal
            StmtItem@(src/main.t:54..64): ItemId(1)
              ConstVar@(src/main.t:54..64): var "a"@(src/main.t:58..59)
                ExprBody@(src/main.t:63..64)
                  Literal@(src/main.t:63..64): Integer(2)
